# external-proto

./: BUILD.bazel  WORKSPACE  main.go
helper/: BUILD.bazel  helper.go
second/: BUILD.bazel  second.go
