load("@io_bazel_rules_go//go:def.bzl", "gazelle", "go_binary", "go_library")

gazelle(
    name = "gazelle",
    prefix = "github.com/trystanj/external-proto",
)

go_library(
    name = "go_default_library",
    srcs = ["main.go"],
    importpath = "github.com/trystanj/external-proto",
    visibility = ["//visibility:private"],
    deps = ["//second:go_default_library"],
)

go_binary(
    name = "external-proto",
    importpath = "github.com/trystanj/external-proto",
    library = ":go_default_library",
    visibility = ["//visibility:public"],
)
